[package]
name = "tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name = "1_variables_mutability"
path = "src/1_variables_mutability.rs"

[[bin]]
name = "2_data_types"
path = "src/2_data_types.rs"

[[bin]]
name = "3_functions"
path = "src/3_functions.rs"

[[bin]]
name = "4_control_flow"
path = "src/4_control_flow.rs"

[[bin]]
name = "5_ownership"
path = "src/5_ownership.rs"